--- a/packing-frontend/src/app/shared/components/calendar/calendar.component.html
+++ b/packing-frontend/src/app/shared/components/calendar/calendar.component.html
@@ -87,85 +87,6 @@
 
 <br/><br/><br/>
 
-<!--
-<div class="table-responsive">
-  <table class="table table-bordered">
-    <thead>
-    <tr>
-      <th>Title</th>
-      <th>Primary color</th>
-      <th>Secondary + text color</th>
-      <th>Starts at</th>
-      <th>Ends at</th>
-      <th>Remove</th>
-    </tr>
-    </thead>
-
-    <tbody>
-    <tr *ngFor="let event of events">
-      <td>
-        <input
-          type="text"
-          class="form-control"
-          [(ngModel)]="event.title"
-          (keyup)="refresh.next()"
-        />
-      </td>
-      <td>
-        <input
-          type="color"
-          [(ngModel)]="event.color?.primary"
-          (change)="refresh.next()"
-        />
-      </td>
-      <td>
-        <input
-          type="color"
-          [(ngModel)]="event.color?.secondary"
-          (change)="refresh.next()"
-        />
-        <input
-          type="color"
-          [ngModel]="event.color?.secondaryText ?? '#1e90ff'"
-          (ngModelChange)="event.color.secondaryText = $event"
-          (change)="refresh.next()"
-        />
-      </td>
-      <td>
-        <input
-          class="form-control"
-          type="text"
-          mwlFlatpickr
-          [(ngModel)]="event.start"
-          (ngModelChange)="refresh.next()"
-          dateFormat="Y-m-dTH:i"
-          altFormat="F j, Y H:i"
-          placeholder="Not set"
-        />
-      </td>
-      <td>
-        <input
-          class="form-control"
-          type="text"
-          mwlFlatpickr
-          [(ngModel)]="event.end"
-          (ngModelChange)="refresh.next()"
-          dateFormat="Y-m-dTH:i"
-          altFormat="F j, Y H:i"
-          placeholder="Not set"
-        />
-      </td>
-      <td>
-        <button class="btn btn-danger" (click)="deleteEvent(event)">
-          Delete
-        </button>
-      </td>
-    </tr>
-    </tbody>
-  </table>
-</div>
--->
-
 <ng-template #modalContent let-close="close">
   <div class="modal-header">
     <h5 class="modal-title">Event action occurred</h5>
@@ -176,11 +97,11 @@
   <div class="modal-body">
     <div>
       Action:
-      <pre>{{ modalData?.action }}</pre>
+      <pre>{{ modalData.action }}</pre>
     </div>
     <div>
       Event:
-      <pre>{{ modalData?.event | json }}</pre>
+      <pre>{{ modalData.event | json }}</pre>
     </div>
   </div>
   <div class="modal-footer">
