--- a/packing-frontend/src/app/admin/components/nfc-cards/nfc-cards.component.html
+++ b/packing-frontend/src/app/admin/components/nfc-cards/nfc-cards.component.html
@@ -28,7 +28,7 @@
 
       <ng-container matColumnDef="user">
         <th mat-header-cell *matHeaderCellDef>User</th>
-        <td mat-cell *matCellDef="let element">{{ element['user']?.name | date:'yyyy.MM.dd hh:mm:ss' }}</td>
+        <td mat-cell *matCellDef="let element">{{ element['user']['firstName']}} {{ element['user']['lastName']}}</td>
       </ng-container>
 
       <ng-container matColumnDef="createdAt">
