--- a/packing-frontend/src/app/admin/components/reservations/reservations.component.html
+++ b/packing-frontend/src/app/admin/components/reservations/reservations.component.html
@@ -12,13 +12,18 @@
         <td mat-cell *matCellDef="let element">{{ element.id }}</td>
       </ng-container>
 
+      <ng-container matColumnDef="user">
+        <th mat-header-cell *matHeaderCellDef>User</th>
+        <td mat-cell *matCellDef="let element">{{ element['user']['firstName']}} {{ element['user']['lastName']}}</td>
+      </ng-container>
+
       <ng-container matColumnDef="reservationAt">
         <th mat-header-cell *matHeaderCellDef>Reservation At</th>
-        <td mat-cell *matCellDef="let element">{{ element['reservationAt'] | date:'yyyy.MM.dd hh:mm:ss'}}</td>
+        <td mat-cell *matCellDef="let element">{{ element['reservationAt'] | date:'yyyy.MM.dd'}}</td>
       </ng-container>
 
       <ng-container matColumnDef="reservationPeriod">
-        <th mat-header-cell *matHeaderCellDef>reservationPeriod</th>
+        <th mat-header-cell *matHeaderCellDef>Period</th>
         <td mat-cell *matCellDef="let element">{{ element['reservationPeriod'] }}</td>
       </ng-container>
 
