--- a/packing-frontend/src/styles.scss
+++ b/packing-frontend/src/styles.scss
@@ -7,6 +7,7 @@ body {
   height: 100%;
   overflow: hidden;
 }
+
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
@@ -16,4 +17,10 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.card:hover {
+  transform: translateY(-9px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
 }
