--- a/packing-frontend/src/app/admin/components/parks/parks.component.scss
+++ b/packing-frontend/src/app/admin/components/parks/parks.component.scss
@@ -1,12 +1,51 @@
-.loading-container {
-  height: 100%;
+.building-card {
   display: flex;
-  justify-content: center;
-  align-self: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 8px;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+  overflow: hidden;
+  transition: transform 0.3s ease-in-out;
+
+  &:hover {
+    transform: translateY(-3px);
+  }
 }
 
-.mat-card{
-  justify-content: center;
-  width: 100%;
+.building-title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.building-content {
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  flex-grow: 1;
+}
+
+.building-info {
+  margin-bottom: 8px;
+}
+
+.building-actions {
+  display: flex;
+  justify-content: center;
+}
+
+.building-card {
+  // Rest of the styles...
+
+  .building-actions {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .edit-button {
+    margin-right: 15px;
+  }
 }
