--- a/packing-frontend/src/app/admin/components/users/users.component.html
+++ b/packing-frontend/src/app/admin/components/users/users.component.html
@@ -9,56 +9,34 @@
     </mat-form-field>
   </mat-card-actions>
 
-  <mat-card-content class="shadow-sm">
-    <table mat-table [dataSource]="dataSource" class="table table-hover table-striped">
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>No.</th>
-        <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+  <mat-card-content>
+    <mat-grid-list [cols]="myBreakPoint" gutterSize="15px" cols="4" rowHeight="250px" rowWidth="150px"
+                   (window:resize)="handleSize($event)">
+      <ng-container *ngFor="let user of pagedUsers">
+        <mat-grid-tile>
+          <mat-card  class="card card-hover border border-primary shadow m-3">
+            <mat-card-title class="text-center">{{ user.firstName }} {{ user.lastName }}</mat-card-title>
+            <mat-card-content>
+              <p class="user-email">Email: {{ user.email }}</p>
+              <p class="user-address">Create at: {{ user.createdAt }}</p>
+              <p class="user-address">Update at: {{ user.updatedAt }}</p>
+            </mat-card-content>
+            <mat-card-actions class="d-flex justify-content-center">
+              <button mat-icon-button color="primary" (click)="edit(user)">
+                <mat-icon>edit</mat-icon>
+              </button>
+              <button mat-icon-button color="primary" (click)="show(user)">
+                <mat-icon>visibility</mat-icon>
+              </button>
+            </mat-card-actions>
+          </mat-card>
+        </mat-grid-tile>
       </ng-container>
-
-      <ng-container matColumnDef="firstName">
-        <th mat-header-cell *matHeaderCellDef>Firstname</th>
-        <td mat-cell *matCellDef="let element">{{ element['firstName'] }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="lastName">
-        <th mat-header-cell *matHeaderCellDef>Lastname</th>
-        <td mat-cell *matCellDef="let element">{{ element['lastName'] }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef>Email</th>
-        <td mat-cell *matCellDef="let element">{{ element['email'] }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="createdAt">
-        <th mat-header-cell *matHeaderCellDef>Created At</th>
-        <td mat-cell *matCellDef="let element">{{ element['createdAt'] | date:'yyyy.MM.dd hh:mm:ss'}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="updatedAt">
-        <th mat-header-cell *matHeaderCellDef>updatedAt</th>
-        <td mat-cell *matCellDef="let element">{{ element['updatedAt'] | date:'yyyy.MM.dd hh:mm:ss' }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef>Action</th>
-        <td mat-cell *matCellDef="let element">
-          <button mat-icon-button (click)="edit(element)" color="primary">
-            <mat-icon>edit</mat-icon>
-          </button>
-          <button mat-icon-button (click)="show(element)" color="primary">
-            <mat-icon>remove_red_eye</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                   showFirstLastButtons
-                   aria-label="Select page of periodic elements">
-    </mat-paginator>
+    </mat-grid-list>
+    <mat-paginator [length]="users.length"
+                   [pageSize]="pageSize"
+                   [pageSizeOptions]="[6, 12, 24]"
+                   (page)="onPageChange($event)"></mat-paginator>
   </mat-card-content>
 </mat-card>
+
