--- a/packing-frontend/src/app/admin/components/add-park-dialog/add-park-dialog.component.html
+++ b/packing-frontend/src/app/admin/components/add-park-dialog/add-park-dialog.component.html
@@ -12,5 +12,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button (click)="dialogRef.close()">Cancel</button>
-  <button mat-raised-button color="primary" [disabled]="dialogForm.invalid">Submit</button>
+  <button mat-raised-button color="primary" [disabled]="dialogForm.invalid" (click)="onSubmit()">Submit</button>
 </mat-dialog-actions>
