--- a/packing-frontend/src/app/admin/components/buildings/buildings.component.html
+++ b/packing-frontend/src/app/admin/components/buildings/buildings.component.html
@@ -2,7 +2,7 @@
   <mat-card-title class="text-center mt-3">Buildings</mat-card-title>
   <mat-card-actions>
     <button mat-raised-button color="primary" (click)="exportBuildings()" class="mx-3">Export Buildings</button>
-    <button mat-raised-button color="primary" (click)="addBuilding()" class="mx-3">Add Building</button>
+    <button mat-raised-button color="primary" (click)="create()" class="mx-3">Add Building</button>
     <mat-form-field appearance="fill">
       <mat-label>Search Building</mat-label>
       <input matInput type="text" class="mr-3" [(ngModel)]="searchQuery" (ngModelChange)="searchBuildings()"/>
