--- a/packing-frontend/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/packing-frontend/src/app/shared/components/sidebar/sidebar.component.scss
@@ -1,16 +1,22 @@
 .sidenav-container {
   left: -10px;
   .sidebar {
+    margin: 16px;
+    border-right: none;
+    background-color: #3f51b5;
+    color: white;
+    border-radius: 10px;
+    padding: 16px;
+    text-align: center;
     width: 200px;
+    z-index: 10;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
-    padding: 20px;
-    min-height: calc(100vh - 64px);
 
     > div {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      background-color: goldenrod;
+      background-color: #3f51b5;
     }
 
     .nav {
@@ -29,6 +35,7 @@
 
         &:hover {
           background-color: #f5f5f5;
+          color: #3f51b5
         }
 
         a {
