--- a/packing-frontend/src/app/user/components/reservation-dialog/reservation-dialog.component.html
+++ b/packing-frontend/src/app/user/components/reservation-dialog/reservation-dialog.component.html
@@ -2,7 +2,7 @@
 <mat-dialog-content>
   <mat-form-field>
     <mat-label>Parking Name</mat-label>
-    <mat-select [(ngModel)]="parkId">
+    <mat-select [(value)]="parkId">
       <mat-option
         *ngFor="let parking of parkingOptions"
         [value]="parking['value']"
@@ -12,7 +12,7 @@
   </mat-form-field>
   <mat-form-field>
     <mat-label>Building</mat-label>
-    <mat-select [(ngModel)]="selectedBuilding">
+    <mat-select [(value)]="building">
       <mat-option
         *ngFor="let building of buildingOptions"
         [value]="building['value']"
@@ -22,7 +22,7 @@
   </mat-form-field>
   <mat-form-field>
     <mat-label>Floor</mat-label>
-    <mat-select [(ngModel)]="selectedFloor">
+    <mat-select [(value)]="floor">
       <mat-option *ngFor="let floor of floorOptions" [value]="floor['value']">{{
         floor.viewValue
       }}</mat-option>
@@ -30,7 +30,7 @@
   </mat-form-field>
   <mat-form-field>
     <mat-label>Slot Number</mat-label>
-    <mat-select [(ngModel)]="selectedSlot">
+    <mat-select [(value)]="slotNumber">
       <mat-option *ngFor="let slot of slotOptions" [value]="slot['value']">{{
         slot.viewValue
       }}</mat-option>
@@ -39,15 +39,23 @@
 
   <mat-form-field class="example-form-field">
     <mat-label>Choose a date</mat-label>
-    <input matInput [matDatepicker]="datepicker" [(ngModel)]="date" required pattern="^(0[1-9]|1\d|2\d|3[01])/(0[1-9]|1[0-2])/((19|20)\d\d)$" (keydown)="onDateInputKeydown($event)" (blur)="validateDate()">
+    <input
+      matInput
+      [matDatepicker]="datepicker"
+      [(ngModel)]="date"
+      required
+      pattern="^(0[1-9]|1\d|2\d|3[01])/(0[1-9]|1[0-2])/((19|20)\d\d)$"
+      (keydown)="onDateInputKeydown($event)"
+      (blur)="validateDate()"
+    />
     <mat-hint>MM/DD/YYYY</mat-hint>
     <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
     <mat-datepicker #datepicker></mat-datepicker>
   </mat-form-field>
 
   <section class="example-section">
-    <mat-checkbox [(ngModel)]="morningSelected">Morning</mat-checkbox>
-    <mat-checkbox [(ngModel)]="afternoonSelected">Afternoon</mat-checkbox>
+    <mat-checkbox>Morning</mat-checkbox>
+    <mat-checkbox>Afternoon</mat-checkbox>
   </section>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
