--- a/packing-frontend/src/app/user/components/user-dashboard/user-dashboard.component.html
+++ b/packing-frontend/src/app/user/components/user-dashboard/user-dashboard.component.html
@@ -2,49 +2,50 @@
   <mat-card class="mb-3 shadow-sm">
     <mat-card-content>
       <button mat-raised-button color="primary" (click)="createReservation()">Create Reservation</button>
-
     </mat-card-content>
-
   </mat-card>
 
   <mat-card class="shadow-sm">
     <table mat-table [dataSource]="dataSource" class="table table-hover table-striped">
 
-      <ng-container matColumnDef="parkingName">
-        <th mat-header-cell *matHeaderCellDef>Parking Name</th>
-        <td mat-cell *matCellDef="let reservation">{{ reservation['parkingName'] }}</td>
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>No.</th>
+        <td mat-cell *matCellDef="let element">{{ element.id }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="building">
-        <th mat-header-cell *matHeaderCellDef>Building</th>
-        <td mat-cell *matCellDef="let reservation">{{ reservation['building'] }}</td>
+      <ng-container matColumnDef="slot">
+        <th mat-header-cell *matHeaderCellDef>Slot</th>
+        <td mat-cell *matCellDef="let element">{{ element['slot']['name']}}</td>
       </ng-container>
 
-      <ng-container matColumnDef="floor">
-        <th mat-header-cell *matHeaderCellDef>Floor</th>
-        <td mat-cell *matCellDef="let reservation">{{ reservation.floor }}</td>
+      <ng-container matColumnDef="reservationAt">
+        <th mat-header-cell *matHeaderCellDef>Reservation At</th>
+        <td mat-cell *matCellDef="let element">{{ element['reservationAt'] | date:'yyyy.MM.dd'}}</td>
       </ng-container>
 
-      <ng-container matColumnDef="slotNumber">
-        <th mat-header-cell *matHeaderCellDef>Slot Number</th>
-        <td mat-cell *matCellDef="let reservation">{{ reservation['slotNumber'] }}</td>
+      <ng-container matColumnDef="reservationPeriod">
+        <th mat-header-cell *matHeaderCellDef>Period</th>
+        <td mat-cell *matCellDef="let element">{{ element['reservationPeriod'] }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef>Date</th>
-        <td mat-cell *matCellDef="let reservation">{{ reservation.date | date }}</td>
+      <ng-container matColumnDef="createdAt">
+        <th mat-header-cell *matHeaderCellDef>Created At</th>
+        <td mat-cell *matCellDef="let element">{{ element['createdAt'] | date:'yyyy.MM.dd hh:mm:ss'}}</td>
       </ng-container>
 
-      <ng-container matColumnDef="time">
-        <th mat-header-cell *matHeaderCellDef>Time</th>
-        <td mat-cell *matCellDef="let reservation">{{ reservation.time }}</td>
+      <ng-container matColumnDef="updatedAt">
+        <th mat-header-cell *matHeaderCellDef>updatedAt</th>
+        <td mat-cell *matCellDef="let element">{{ element['updatedAt'] | date:'yyyy.MM.dd hh:mm:ss' }}</td>
       </ng-container>
 
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Action</th>
-        <td mat-cell *matCellDef="let reservation">
-          <button mat-icon-button color="warn" (click)="cancelReservation()">
-            <mat-icon>cancel</mat-icon>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button (click)="edit(element)" color="primary">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-icon-button (click)="show(element)" color="primary">
+            <mat-icon>remove_red_eye</mat-icon>
           </button>
         </td>
       </ng-container>
@@ -52,10 +53,8 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                   showFirstLastButtons
-                   aria-label="Select page of periodic elements">
-    </mat-paginator>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
+                   aria-label="Select page of periodic elements"></mat-paginator>
   </mat-card>
 
 </div>
