--- a/packing-frontend/src/app/admin/components/dashboard/dashboard.component.html
+++ b/packing-frontend/src/app/admin/components/dashboard/dashboard.component.html
@@ -2,7 +2,8 @@
   <mat-card-title class="text-center mt-3">Dashboard</mat-card-title>
   <mat-card-content>
     <mat-grid-list [cols]="myBreakPoint" gutterSize="15px" cols="4" rowHeight="150px"
-                   (window:resize)="handleSize($event)">
+                   (window:resize)="handleSize($event)"
+    *ngIf="counterData != undefined">
       <ng-container>
         <mat-grid-tile>
           <div class="card" (click)="onClickCard('parks')">
