--- a/packing-frontend/src/app/admin/components/add-reservation-dialog/add-reservation-dialog.component.html
+++ b/packing-frontend/src/app/admin/components/add-reservation-dialog/add-reservation-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Add Slots</h2>
+<h2 mat-dialog-title>Add Reservations</h2>
 <div mat-dialog-content>
   <form [formGroup]="dialogForm" (ngSubmit)="onSubmit()" #formDir="ngForm" novalidate>
     <mat-form-field>
