--- a/packing-frontend/src/app/admin/components/add-reservation-dialog/add-reservation-dialog.component.html
+++ b/packing-frontend/src/app/admin/components/add-reservation-dialog/add-reservation-dialog.component.html
@@ -36,7 +36,7 @@
     <mat-form-field>
       <mat-label>User</mat-label>
       <mat-select formControlName="user" name="user">
-        <mat-option *ngFor="let user of userOptions" [value]="user">{{ user['firstName'] }}</mat-option>
+        <mat-option *ngFor="let user of userOptions" [value]="user">{{ user['firstName'] +' '+ user['lastName'] }}</mat-option>
       </mat-select>
       <mat-error *ngIf="dialogForm.controls['user'].invalid">User is required</mat-error>
     </mat-form-field>
