--- a/packing-frontend/src/app/admin/components/floors/floors.component.html
+++ b/packing-frontend/src/app/admin/components/floors/floors.component.html
@@ -5,7 +5,7 @@
     <button mat-raised-button color="primary" (click)="create()" class="mx-3">Add Floor</button>
     <mat-form-field appearance="fill">
       <mat-label>Search Building</mat-label>
-      <input matInput type="text" class="mr-3" [(ngModel)]="searchQuery" (ngModelChange)="searchBuildings()"/>
+      <input matInput type="text" class="mr-3" [(ngModel)]="searchQuery" (ngModelChange)="searchFloors()"/>
       <button mat-button *ngIf="searchQuery" matSuffix mat-icon-button aria-label="Clear" (click)="clearSearch()">
         <mat-icon>close</mat-icon>
       </button>
@@ -13,7 +13,7 @@
   </mat-card-actions>
   <mat-card-content>
     <mat-grid-list cols="4" rowHeight="230px" gutterSize="16px" class="building-grid">
-      <mat-grid-tile *ngFor="let floor of dataSource">
+      <mat-grid-tile *ngFor="let floor of pagedFloor">
         <mat-card class="building-card border border-primary shadow">
           <mat-card-title class="building-title mt-3">Floor {{ floor.id }}</mat-card-title>
           <mat-card-content>
@@ -32,6 +32,7 @@
         </mat-card>
       </mat-grid-tile>
     </mat-grid-list>
+    <mat-paginator [pageSizeOptions]="[8,12,16]" showFirstLastButtons></mat-paginator>
   </mat-card-content>
 </mat-card>
 
