--- a/packing-frontend/src/app/admin/components/parks/parks.component.html
+++ b/packing-frontend/src/app/admin/components/parks/parks.component.html
@@ -5,7 +5,7 @@
     <button mat-raised-button color="primary" (click)="create()" class="mx-3">Add Park</button>
     <mat-form-field appearance="fill">
       <mat-label>Search Building</mat-label>
-      <input matInput type="text" class="mr-3" [(ngModel)]="searchQuery" (ngModelChange)="searchBuildings()"/>
+      <input matInput type="text" class="mr-3" [(ngModel)]="searchQuery" (ngModelChange)="searchParks()"/>
       <button mat-button *ngIf="searchQuery" matSuffix mat-icon-button aria-label="Clear" (click)="clearSearch()">
         <mat-icon>close</mat-icon>
       </button>
