--- a/packing-frontend/src/app/admin/components/parks/parks.component.html
+++ b/packing-frontend/src/app/admin/components/parks/parks.component.html
@@ -1,14 +1,15 @@
 <mat-card class="shadow">
   <mat-card-title class="text-center mt-3">Park</mat-card-title>
   <mat-card-actions>
-    <button mat-raised-button color="primary" (click)="exportBuildings()" class="mx-3">Export Parks</button>
+    <a mat-raised-button color="primary" (click)="exportBuildings()" class="btn m-3" title="Download JSON" [href]="downloadJsonHref"
+       download="parks.json">
+      <mat-icon>save_alt</mat-icon>
+      <span style="margin-left: 10px;">Export</span>
+    </a>
     <button mat-raised-button color="primary" (click)="create()" class="mx-3">Add Park</button>
     <mat-form-field appearance="fill">
       <mat-label>Search Building</mat-label>
       <input matInput type="text" class="mr-3" [(ngModel)]="searchQuery" (ngModelChange)="searchParks()"/>
-      <button mat-button *ngIf="searchQuery" matSuffix mat-icon-button aria-label="Clear" (click)="clearSearch()">
-        <mat-icon>close</mat-icon>
-      </button>
     </mat-form-field>
   </mat-card-actions>
   <mat-card-content>
