--- a/packing-frontend/src/app/admin/components/buildings/buildings.component.html
+++ b/packing-frontend/src/app/admin/components/buildings/buildings.component.html
@@ -1,14 +1,12 @@
 <mat-card class="shadow">
   <mat-card-title class="text-center mt-3">Buildings</mat-card-title>
   <mat-card-actions>
-    <button mat-raised-button color="primary" (click)="exportBuildings()" class="mx-3">Export Buildings</button>
+    <a mat-raised-button color="primary" (click)="exportBuildings()" class="mx-3"
+       [href]="downloadJsonHref" download="buildings.json">Export Buildings</a>
     <button mat-raised-button color="primary" (click)="create()" class="mx-3">Add Building</button>
     <mat-form-field appearance="fill">
       <mat-label>Search Building</mat-label>
       <input matInput type="text" class="mr-3" [(ngModel)]="searchQuery" (ngModelChange)="searchBuildings()"/>
-      <button mat-button *ngIf="searchQuery" matSuffix mat-icon-button aria-label="Clear" (click)="clearSearch()">
-        <mat-icon>close</mat-icon>
-      </button>
     </mat-form-field>
   </mat-card-actions>
   <mat-card-content>
